move image decoding and encoding to native and add support to decode avif and webp